--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="./js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-    <script src="./js/weather.js"></script>
+    <!-- <script src="./js/weather.js"></script> -->
+    <script src="https://subinbo.github.io/project05/js/weather.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/welfare.js"></script>
 </head>
