--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="mainContentBottom cf">
 				<div class="mainContent1">
 					<h2>오늘의 날씨는?</h2>
-					<div class="ctemp">온도:{$cTemp} </div>
+					<div class="ctemp">온도: </div>
 					<div class="cicon"></div>
 				</div>
 			</div>
